tests/baselines/reference/interfaceExtendingClass.errors.txt
tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts(4,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts (1 errors) ====
    class Foo {
        x: string;
        y() { }
        get Z() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
        [x: string]: Object;
    }
    
    interface I extends Foo {
    }
    
    var i: I;
    var r1 = i.x;
    var r2 = i.y();
    var r3 = i.Z;
    
    var f: Foo = i;
    i = f;